# signals

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
backend/app/: config.py  llm_report.py  main.py  report_eval.py
backend/app/routers/: classification.py  patients.py  records.py  reports.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: BeatFeaturesTable.tsx  ClassificationResults.tsx  ClassificationView.tsx  ConfusionMatrixChart.tsx  DailyTelemetryTable.tsx  DashboardView.tsx  FeatureSelector.tsx  HyperparameterControls.tsx  ProcedureSummaryPanel.tsx  ReportPanel.tsx  SelectorBar.tsx  SummaryCards.tsx  TrainingProgress.tsx  TrendChart.tsx  WaveformViewer.tsx
frontend/src/lib/: api.ts  glossary.ts  theme.ts  types.ts
pipeline/: beat_features.py  chamber_dataset.py  chiron_features.py  classification_models.py  fetch_chiron.py  fetch_scg_rhc.py  paths.py  run_chiron_pipeline.py  run_pipeline.py  scg_features.py  schemas.py  store.py
tests/: test_api.py  test_beat_features.py  test_chiron_features.py  test_classification_api.py  test_classification_models.py  test_ingestion.py  test_llm_report.py  test_report_eval.py  test_scg_features.py
