[project]
name = "cordella-hf-signals"
version = "0.1.0"
description = "Hemodynamic signal processing + LLM clinical reporting demo (Cordella/CardioMEMS-adjacent portfolio project)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "wfdb>=4.3",
    "neurokit2>=0.2.10",
    "heartpy>=1.2.7",
    "pyPPG>=1.0.5",
    "duckdb>=1.1",
    "pandas>=2.2",
    "pyarrow>=17.0",
    "scipy>=1.14",
    "anthropic>=0.40",
    "requests>=2.32",
    "python-dotenv>=1.0",
    "scikit-learn>=1.5",
    "torch>=2.2",
    "xgboost>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*", "pipeline*"]

[tool.ruff]
line-length = 100
